k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dogood
  labels:
    app: dogood
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: dogood
  template:
    metadata:
      labels:
        app: dogood
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: dogood
          image: dogood
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20
