k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dogood-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "dogood-backendconfig"}'
spec:
  type: ClusterIP
  selector:
    app: dogood
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
